src/App.scss
.App {
  text-align: center;
  height: 100vh;
  display: grid;
  gap: 20px;
  grid-template-rows: 150px minmax(0, calc(100vh - 270px)) 40px;
}

.sign-in-with-twitter {
  background-color: #00aced;
  height: 70px;
  color: #eeeeee;
  font-size: 1.5rem;
  border-radius: 24px;
  box-shadow: 2px 2px 8px #00000060;
}

.habit-card {
  z-index: 1;
  display: grid;
  height: 70px;
  background-color: #091952;
  margin-bottom: 24px;
  border-radius: 24px;
  align-items: center;
  grid-template-columns: 40px 1fr 10%;
  gap: 15px;
  color: #eeddff;
  box-shadow: 2px 2px 8px #00000060;
}

.habit-content {
  z-index: 1;
  text-align: start;
  overflow-x: scroll;
  white-space: nowrap;
}

.done {
  z-index: 1;
  text-decoration: line-through;
}

.round {
  z-index: 1;
  position: relative;
  margin-left: 16px;
}

.round label {
  z-index: 1;
  background-color: #ffffff00;
  border: 1px solid #8a00b4;
  border-radius: 50%;
  cursor: pointer;
  height: 28px;
  left: 0;
  position: absolute;
  top: 0;
  width: 28px;
}

.round label:after {
  border: 2px solid #fff;
  border-top: none;
  border-right: none;
  content: "";
  height: 6px;
  left: 7px;
  opacity: 0;
  position: absolute;
  top: 8px;
  transform: rotate(-45deg);
  width: 12px;
}

.round input[type="checkbox"] {
  visibility: hidden;
}

.round input[type="checkbox"]:checked + label {
  background-color: #132375;
  border-color: #132375;
}

.round input[type="checkbox"]:checked + label:after {
  opacity: 1;
}

.sign-out {
  position: absolute;
  left: 10px;
  top: 10px;
}

#clock {
  padding: 50px;
  color: #61dafb;
  font-size: 2.5rem;
}

.habit-form {
  border-radius: 24px;
  padding: 20px 20px 20px 20px;
  border: none;
  font-size: 24px;
  box-shadow: none;
}

.search-form-control {
  position: relative;
}

.habit-submit {
  position: absolute;
  top: 8px;
  bottom: 8px;
  right: 8px;
}

.search-form-control .form-control {
  border-radius: 24px;
  height: 3.5rem;
  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.08);
  border: 1px solid #e7e7e7;
}

.habit-list {
  overflow-y: scroll;
}

.open-nav {
  font-size: 30px;
  position: absolute;
  top: 10px;
  left: 10px;
  color: white;
  z-index: 2;
}

/* The side navigation menu */
.sidenav {
  height: 100%; /* 100% Full-height */
  width: 0; /*0 width - change this with JavaScript */
  position: fixed; /* Stay in place */
  z-index: 2; /* Stay on top */
  top: 0; /* Stay at the top */
  left: 0;
  background-color: #081043;
  overflow-x: hidden; /* Disable horizontal scroll */
  padding-top: 60px; /* Place content 60px from the top */
  transition: 0.5s; /* 0.5 second transition effect to slide in the sidenav */
}

.sidenav-swipe {
  height: 100%; /* 100% Full-height */
  width: 15%; /*0 width - change this with JavaScript */
  position: fixed; /* Stay in place */
  z-index: 1; /* Stay on top */
  top: 0; /* Stay at the top */
  left: 0;
  background-color: white;
  opacity: 0;
}

.nav-open {
  width: 50%;
}

/* The navigation menu links */
.sidenav a {
  padding: 8px 8px 8px 32px;
  text-decoration: none;
  font-size: 25px;
  color: #818181;
  display: block;
  transition: 0.3s;
}

/* When you mouse over the navigation links, change their color */
.sidenav a:hover {
  color: #f1f1f1;
}

/* Position and style the close button (top right corner) */
.sidenav .closebtn {
  position: absolute;
  top: 0;
  right: 25px;
  font-size: 36px;
  margin-left: 50px;
}

.sidenav-item {
  color: #eeddff;
  font-size: 24px;
  overflow-x: hidden;
  z-index: 4;
  white-space: nowrap;
}

.sidenav-item:hover {
  color: #ccaaee;
}

/* Style page content - use this if you want to push the page content to the right when you open the side navigation */
#main {
  transition: margin-left 0.5s;
  padding: 20px;
}

/* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
@media screen and (max-height: 450px) {
  .sidenav {
    padding-top: 15px;
  }
  .sidenav a {
    font-size: 18px;
  }
}


.loading-wrap {
  display: flex;
  align-items: center;
  justify-content: center;
  height: 80vh;
}

.loading {
  font-size: 60spx;
  font-family: 'Montserrat', sans-serif;
  font-weight: 400;
  text-align: center;
  color: #eeddff;
  span {
    display: inline-block;
    margin: 0 -.05em;
  }
}

.loading04 {
  span {
    animation: loading04 .7s infinite;
    @for $i from 1 through 6 {
      &:nth-child(#{$i+1}) {
        animation-delay: #{$i*.1}s;
      }
    }
  }
}
@keyframes loading04 {
  0%, 100% {
    transform: translateY(0);
  }
  50% {
    transform: translateY(15px);
  }
}

